@@ -1,0 +1,77 @@
+// Tags: JDK1.2
+
+// Copyright (C) 2004 David Gilbert <david.gilbert@object-refinery.com>
+
+// Mauve is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 2, or (at your option)
+// any later version.
+
+// Mauve is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with Mauve; see the file COPYING.  If not, write to
+// the Free Software Foundation, 59 Temple Place - Suite 330,
+// Boston, MA 02111-1307, USA.  */
+
+package gnu.testlet.java.awt.geom.Ellipse2D;
+
+import gnu.testlet.TestHarness;
+import gnu.testlet.Testlet;
+
+import java.awt.geom.Ellipse2D;
+
+/**
+ * Some checks for the contains() method of the {@link Ellipse2D} class.
+ */
+public class contains implements Testlet {
+
+  /**
+   * Runs the test using the specified harness.
+   * 
+   * @param harness  the test harness (<code>null</code> not permitted).
+   */
+  public void test(TestHarness harness)       
+  {
+    testContains1(harness);
+    testContains2(harness);
+  }
+
+  private void testContains1(TestHarness harness) {
+    harness.checkPoint("contains(double, double)");
+    Ellipse2D e = new Ellipse2D.Double();
+    harness.check(!e.contains(0.0, 0.0));
+
+    e = new Ellipse2D.Double(1.0, 2.0, 3.0, 4.0);
+    harness.check(!e.contains(1.0, 2.0));
+    harness.check(!e.contains(4.0, 2.0));
+    harness.check(!e.contains(1.0, 6.0));
+    harness.check(!e.contains(4.0, 6.0));
+    harness.check(e.contains(2.5, 4.0));
+      
+    e = new Ellipse2D.Double(-1.0, -1.0, 2.0, 2.0);
+    harness.check(e.contains(0.0, 0.0));
+    harness.check(!e.contains(-1.0, 0.0));
+    harness.check(!e.contains(0.0, 1.0));
+    harness.check(!e.contains(0.0, -1.0));
+    harness.check(!e.contains(0.0, 1.0));
+
+    harness.check(e.contains(-0.9, 0.0));
+    harness.check(e.contains(0.0, 0.9));
+    harness.check(e.contains(0.0, -0.9));
+    harness.check(e.contains(0.0, 0.9));
+  }
+
+  private void testContains2(TestHarness harness) {
+    harness.checkPoint("contains(double, double, double, double)");
+    Ellipse2D e = new Ellipse2D.Double();
+    harness.check(!e.contains(0.0, 0.0, 0.0, 0.0));
+    e = new Ellipse2D.Double(1.0, 2.0, 3.0, 4.0);
+    harness.check(!e.contains(1.0, 2.0, 3.0, 4.0));
+    harness.check(e.contains(2.5, 4.0, 1.0, 1.0));
+  }
+
+}
